--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<p>Coder &nbsp;&bull;&nbsp; Pusher &nbsp;&bull;&nbsp; Player</p>
 					<nav>
 						<ul>
-							<li><a href="Ke_Shichang_Resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+							<li><a href="Shichang_Ke_Resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 							<li><a href="https://github.com/gillKSC" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/gill-ke/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto:gilliankscjd@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
