--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<!-- Header -->
 				<header id="header">
 					<h1>Shichang Ke</h1>
-					<p>Coder &nbsp;&bull;&nbsp; Pusher &nbsp;&bull;&nbsp; Player</p>
+					<p>Coder &nbsp;&bull;&nbsp; Learner &nbsp;&bull;&nbsp; Player</p>
 					<nav>
 						<ul>
 							<li><a href="Shichang_Ke_Resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
